[project]
name = "xtu-network"
version = "0.0.19"
description = "湘潭大学校园网登录 API"
authors = [{ name = "YangRucheng", email = "admin@yangrucheng.top" }]
dependencies = ["httpx>0.28.0"]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "AGPL-3.0" }

[project.urls]
homepage = "https://github.com/xtu-org/xtu-network"
repository = "https://github.com/xtu-org/xtu-network"

[tool.pdm.dev-dependencies]
i18n = ["babel ~=2.11"]
dev = ["ruff~=0.6.0", "pre-commit~=3.1"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = [
    "C901",
    "T201",
    "E402",
    "UP037",
    "UP006",
    "UP007",
    "PYI020",
    "PYI021",
    "W293",
    "UP035",
    "E501",
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
